--- a/Joc Penjat/style.css
+++ b/Joc Penjat/style.css
@@ -12,6 +12,7 @@ body {
     gap: 10px;
 }
 
+
 h1 {
     text-align: center;
     margin-bottom: 10px;
@@ -72,6 +73,8 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 25px;
+    
 }
 
 .podium {
@@ -124,29 +127,47 @@ h1 {
 .top10 {
     background-color: white;
     width: 250px;
-    height: 100px;
+    height: auto;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.top10 div {
-    display: flex;
-    justify-content: space-around;
+.fotoPerfil {
+    background-color: red;
+    border-radius: 50%;
+    width: 20px;
+    margin-left: 40%;
+    padding: 2px;
 }
 
-.top10 > div:first-child {
-    font-weight: bold;
-    padding: 5px;
+
+ .contenidorPuntuacions {
+    table-layout: fixed;
+    align-self: center;
+    text-align: center;
+    width: 500px;
+    border-collapse: collapse;
+    background-color: white;
+    width: 400px
+}
+
+
+
+.contenidorPuntuacions thead th {
+    width: 25%;
+    padding: 3px;
+}
+
+.capçalera {
     border-bottom: 1px solid black;
 }
 
-.top10 > div:nth-child(2) {
-   
+td {
+    overflow-y: hidden;
 }
 
-.fotoPerfil {
-    background-color: violet;
-    border-radius: 50%;
-    padding: 5px;
+tbody td {
+   padding-bottom:  5px;
+   padding-top: 3px;
 }
