ranking puntuacions casi acabat

--- a/Joc Penjat/style.css
+++ b/Joc Penjat/style.css
@@ -134,11 +134,15 @@ h1 {
 }
 
 .fotoPerfil {
-    background-color: red;
+    background-color: lightcoral;
     border-radius: 50%;
     width: 20px;
     margin-left: 40%;
-    padding: 2px;
+    padding: 3px;
+    padding-left: 5px;
+    padding-top: 4px;
+    text-align: center;
+    
 }
 
 
