--- a/Joc Penjat/style.css
+++ b/Joc Penjat/style.css
@@ -74,6 +74,8 @@ h1 {
     flex-direction: column;
     align-items: center;
     margin-bottom: 25px;
+    gap: 50px;
+    text-align: center;
     
 }
 
@@ -138,9 +140,11 @@ h1 {
     border-radius: 50%;
     width: 20px;
     margin-left: 40%;
-    padding: 3px;
+    padding: 5px 4px;
     padding-left: 5px;
+    padding-right: 5px;
     padding-top: 4px;
+    padding-bottom:4px ;
     text-align: center;
     
 }
