--- a/Joc Penjat/index.css
+++ b/Joc Penjat/index.css
@@ -1,37 +1,165 @@
+ @import url('https://fonts.googleapis.com/css2?family=Schoolbell&display=swap');
+
+
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Schoolbell';
 }
 
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-content: center;
+    justify-content: center;
     width: 100vW;
     height: 100vH;
     align-items: center;
-    background-color: snow;
+    /* background-color: #2A2D43; */
+    background: linear-gradient(135deg, #1B263B, #4B4B4B);    
+    gap: 50px;
 }
 
-div {
+.main-content {
+  
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
-
+    gap: 50px;
+    
 }
 
-button {
-    padding: 5px;
-    border-radius: 4px;
-    width: 50%;
-    background-color: black;
-    color: white;
+h1 {
+    color: whitesmoke;
+    font-weight: bold;
+    position: relative;
+    top: 0;
+    text-align: center;
+    font-size: 50px;
+    
 }
 
-a {
-    color: white;
+.menu-container {
+    display: flex;
+    flex-direction: column;
+    width: 700px;
+    height: 600px;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: space-around;
+    gap: 30px;
+    
+}
+
+.container-buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+
+
+.button-style {
+    width: 450px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #1a1a2e;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px whitesmoke;
+    background: whitesmoke;
+   
+    
+   }
+   
+   .button-style, .button-style span {
+    transition: 200ms;
+   }
+   
+   .button-style .text {
+    transform: translateX(35px);
+    color: #1a1a2e;
+    font-weight: bold;
+    font-size: 20px;
+    text-decoration: none;
+   }
+   
+   .button-style .icon {
+    position: relative;
+    border-left: 1px solid #1a1a2e;
+    transform: translateX(150px);
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+   }
+   
+   .button-style svg {
+    width: 15px;
+    fill: #1a1a2e;
+   }
+
+   .button-style:hover svg {
+    width: 30px;
+    fill: whitesmoke;
+   }
+   
+   .button-style:hover {
+    background: linear-gradient(135deg, #FF6347, #FF7F50);
+    border-color: whitesmoke;
+   }
+
+   .button-style .text:hover {
+    color: whitesmoke;
+    text-decoration: none;
+   }
+   
+   .button-style:hover .text {
+    color: transparent;
+   }
+   
+   .button-style:hover .icon {
+    width: 150px;
+    border-left: none;
+    transform: translateX(0);
+   }
+   
+   .button-style:focus {
+    outline: none;
+   }
+   
+   .button-style:active .icon svg {
+    transform: scale(0.8);
+   }
+
+   .nes-field {
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    width: 450px;
+    align-items: flex-start;
+    gap: 0;
+   }
+
+   .nes-field label {
+    font-size: 30px;
+   }
+
+   #name-field {
+    font-size: 20px;
+    border-radius: 8px;
+    outline: none;
+    box-shadow: 1px 1px 3px whitesmoke;
+    border-color: whitesmoke;
+   }
+
+   a {
     text-decoration: none;
 }
-
