--- a/Joc_Penjat/joc.css
+++ b/Joc_Penjat/joc.css
@@ -18,6 +18,7 @@ body {
     width: 100vW;
     height: 100vH;
     color: whitesmoke;
+    padding-bottom: 20px;
 }
 
 header {
@@ -34,6 +35,7 @@ header {
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
     box-shadow: 0px 2px 6px rgba(228, 220, 220, 0.2);
+    
 }
 
 a {
@@ -82,6 +84,7 @@ h1 {
     text-align: center;
     margin-bottom: 10px;
     font-size: 50px;
+    margin-top: 70px;
 }
 
 .dibuixPenjat img {
