--- a/CRUD/src/App.css
+++ b/CRUD/src/App.css
@@ -20,3 +20,12 @@
   background: #333;
   text-decoration: none;
 }
+
+ .App .lupa {
+  width: 25px;
+}
+
+.App #cercador {
+border-radius: 5px;
+padding: 5px;
+}
