--- a/CRUD/src/pages/Exercici.css
+++ b/CRUD/src/pages/Exercici.css
@@ -1,7 +1,7 @@
 .card {
     padding: 20px;
     border: 1px solid #e4e4e4;
-    border-radius: 4px;
+    border-radius: 8px;
     box-shadow: 4px 4px 6px rgba(0,0,0,0.05);
     margin-bottom: 20px;
   }
@@ -10,9 +10,40 @@
     display: block;
   }
 
-  .card .veure-exercicii svg {
-    width: 10px;
-    font-size: 10px;
+  .card .veure-exercici  {
+    width: 30px;
+    color: black;
+    position: relative;
   }
+
+  .card .veure-exercici:hover  {
+    scale: 1.2;
+  }
+
+ #container .card {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+
+  .card .editar {
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: rgb(247, 191, 10);
+    color: rgb(0, 0, 0);
+  }
+
+  .card .editar:hover {
+    scale: 1.2;
+    background-color: rgb(236, 181, 0);
+  }
+
+ #container .card .div-svg {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 50px;
+ }
 
   
