--- a/CRUD/src/pages/FormExercici.css
+++ b/CRUD/src/pages/FormExercici.css
@@ -82,3 +82,52 @@
   justify-content: center;
   align-items: center;
 }
+
+
+.div-form .avis-iniciar-sessio {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 85%;
+  max-width: 400px;
+  height: 100px;
+  background-color: rgba(255, 255, 255, 0.884);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  border-radius: 8px;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  text-align: center;
+
+}
+.div-form  .avis-iniciar-sessio p {
+  margin-bottom: 20px;
+  color: #333;
+  font-size: 23px;
+  text-align: center;
+}
+
+.div-form .descripcio-exercici {
+  width: 100%;
+  height: 150px;
+  padding: 12px;
+  font-size: 1.2em;
+  border-radius: 6px;
+  border: 1px solid #e0e7ff;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  resize: vertical;
+  color: #333;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.div-form .descripcio-exercici:focus {
+  border-color: #4c6ef5;
+  outline: none;
+  box-shadow: 0 0 8px rgba(76, 110, 245, 0.3);
+}  
